--- a/index.html
+++ b/index.html
@@ -1,43 +1,99 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muskan's Profile</title>
+    <title>My resumne</title>
 </head>
 <body>
-    <h1>Muskan Barthwal's Portfolio</h1>
-    <h2>I'm a web developer</h2>
+    <h1>Muskan Barthwal</h1>
+    <img src="./images/Profile pic.jpg" height="100" alt="Profile pic of Muskan"/>
+    <hr>
+
+    <h2> Career Objective:</h2>
+    <p>To work with an organization where I can learn and utilize my
+        technical knowledge and interpersonal skills,enriching my profile with
+        the same.</p>
+    <hr>
+
+    <h2>Qualification:</h2>
+    <ul>
+        <li><h4>BACHELOR OF TECHNOLOGY, G.L. BAJAJ INSTITUTE OF
+            TECHNOLOGY AND MANAGEMENT</h4>
+            August 2018 - July 2022
+            <br/>
+            Passed class XII in the year 2018 from CBSE with 94%.
+        </li>
+            <li><h4>XII, MODERN SCHOOL, NOIDA</h4> 
+            March 2018
+        </li>
+        <li><h4>CLASS X, MODERN SCHOOL, NOIDA</h4>
+            March 2016
+            Passed class X in the year 2016 from CBSE with 10 CGPA.
+        </li>
+    </ul>
+    <hr/>
+
+    <h2>Work Experience:</h2>
+        <p><b>TAVANT TECHNOLOGIES(Software Engineer Trainee)</b></p>
+        Aug 2022-Current
+        <ul>
+            <li>Collected, cleansed, and provided modeling and analyses of
+                structured and unstructured data.
+            </li>
+            <li>Worked on large data with raw row count of 70 thousand.
+            </li>
+        </ul>
+    <hr/>
+
+    <h2>College Project:</h2>
+    <ol>
+        <li><u><b>Rate My Doc :</b></u><br/> 
+            <p>Technology used- Python, Django, HTML,CSS, MongoDb</p>
+
+            <p>The main objective of this project was to detect credible and good doctors and
+            take appointments from them. People who visited the doctor were also able to
+            leave reviews.</p>
+        </li>
+        <li><u><b>Car Price Predictor:</b></u>
+            <p>Modules used- Pandas, Numpy, Sklearn</p>
+            <p>The main objective of this project is to predict the price of used cars on the basis
+            of certain data attributes using Random Forest Regression Technique. The
+            project aims at developing a proper selling price Prediction System for cars
+            using Python language and Machine learning.</p>
+
+        </li>
+    </ol>
+    <hr/>
+
+    <h2>Technical Skills:</h2>
+    <ul>
+        <li>C++</li>
+        <li>C</li>
+        <li>Python</li>
+        <li>MYSQL</li>
+        <li>Hadoop</li>
+    </ul>
+    <hr/>
     
+    <h2>Soft Skills:</h2>
+    <ul>
+        <li>Good problem solving skills</li>
+        <li>Quick learning ability</li>
+        <li>A Good team player</li>
+        <li>Flexible</li>
+        <li>Excellent listener</li>
+    </ul>
     <hr/>
 
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="Movie ranking project preview"/>
-    <br/>
-
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday invite project preview"/>
-    <br/>
-
+    <h2>Certifications:</h2>
+    <ul>
+        <li>Communication skills and soft skills from TCS ION.</li>
+        <li>Python specialization from Coursera.</li>
+        <li>Foundation of Artificial Intelligence from skillup IBM.</li>
+    </ul>
     <hr/>
 
-    <a href="./public/about.html">About me</a>
-    <a href="./public/contact.html">Contact Me</a>
-
+    <a href="./contact.html">Contact Me</a>
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
